solves styles and UX issues
- fully responsive
- adds backdrop on opening of the sidebar
- search input styling complete
- covid table responsive
- adds UX improvement

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
 
   <body class="font-raleway">
     <div id="snackbar"></div>
+    <div id="backdrop"></div>
     <div id="root"></div>
   </body>
 </html>
