adds search to weather
- general refactor of weather related logic
- adds a modal to display searches result for weather forecast
- saves the default forecast location in local storage
- asks user for permission to get the location for weather forecast

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
   <body class="font-raleway">
     <div id="snackbar"></div>
     <div id="backdrop"></div>
+    <div id="modal"></div>
     <div id="root"></div>
   </body>
 </html>
